# libigl-template

./: .gitignore  CMakeLists.txt  build.bash
include/: lib.hpp
src/: hello.cpp
